2011-03-30  John Chapman  <John.Chapman@cern.ch>

	* python/ArgDicTools.py - add import of AMI_Error, changes for
	q130 digitization test configuration.
	* python/BaseOfCompositeTrf.py - remove reference to undefined
	variable dicName from runtimeError message.
	* python/Configuration.py - fix indentation for class
	InputLogsFileArg.
	* python/GeoConfig.py - fix indentation.
	* scripts/CmdToPositional.py - fix use of list keyword as a
	variable name.
	* Tagging as PATJobTransforms-00-03-30

2011-03-29 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Declared outputNTUP_TRIgBJETFile in ListOfDefaultPositionalKeys.
	* Tagging as PATJobTransforms-00-03-29

2011-03-28 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Declared outputNTUP_TRIGMUFile in ListOfDefaultPositionalKeys.
	* Tagging as PATJobTransforms-00-03-28

2011-03-24 Joao Firmino da Costa <joao.costa@cern.ch>
	* Commented out temporarily changes made to propagate
	ReleaseVersion in to GetCommand output as there is a bug report on
	it not solved
	* tagging PATJobTransforms-00-03-27

2011-03-23 Maaike Limper
	* Change AMI_Error->Exception to catch error when CERN replica needs to be used
	* tagging PATJobTransforms-00-03-26

2011-03-20 Rolf Seuster <seuster AT cern.ch>
	* from ThomasK: new code to specify --drop-and-reload
	* tagging PATJobTransforms-00-03-25

2011-03-19 Joao Firmino da Costa <joao.costa@cern.ch>
	* Added compatibility for e-tags in GetCommand.py
	 and AthenaRelease of the tag is printed when executing
	GetCommand.py
	* tagging PATJobTransforms-00-03-24

2011-03-19 Rolf Seuster <seuster AT cern.ch>
	* "--drop-and-reload" now default, if no other option to "--athenaopts" specified
	* tagging PATJobTransforms-00-03-23

2011-03-18 Maarten Boonekamp
	* cf previous entry : now added 
	outputNTUP_SMWENUFile,outputNTUP_SMZEEFile,outputNTUP_SMDYEEFile,outputNTUP_SMBKGEFile,
	outputNTUP_SMWMUNUFile,outputNTUP_SMZMUMUFile,outputNTUP_SMDYMUMUFile,outputNTUP_SMBKGMUFile,